--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.storedata
-bulkstore
+*.trace
 # Created by https://www.toptal.com/developers/gitignore/api/swift,xcode
 # Edit at https://www.toptal.com/developers/gitignore?templates=swift,xcode
 
